GT-59 Not able to type on search input for report table
#GT-59 Fixed

--- a/frontend/src/css/CustomStyle.css
+++ b/frontend/src/css/CustomStyle.css
@@ -19,6 +19,10 @@ table, td, th, tr {
     vertical-align: middle;
 }
 
+table input {
+    color: black;
+}
+
 .tableStats td {
     text-align: center;
     vertical-align: middle;
